(fix|COS-3181): Fixed visibility of month switching buttons (calendar)

--- a/packages/apps/frontera/src/styles/date-picker.scss
+++ b/packages/apps/frontera/src/styles/date-picker.scss
@@ -229,6 +229,7 @@
   font-size: 0;
   height: 30px;
   width: 30px;
+
 }
 
 .react-calendar__navigation__arrow.react-calendar__navigation__prev-button:after {
@@ -236,10 +237,10 @@
   display: inline-block;
   height: 30px;
   width: 30px;
-  color: var(--chakra-colors-gray-500);
-  background-color: var(--chakra-colors-gray-500);
-  -webkit-mask: url(../public/icons/chevron-left.svg) bottom center no-repeat;
-  mask: url(../public/icons/chevron-left.svg) bottom center no-repeat;
+  color: inherit;
+  background-color: #344054; // gray-700
+  -webkit-mask: url(../assets/icons/chevron-left.svg) bottom center no-repeat;
+  mask: url(../assets/icons/chevron-left.svg) bottom center no-repeat;
 }
 
 .react-calendar__navigation__arrow.react-calendar__navigation__next-button:after {
@@ -247,10 +248,10 @@
   display: inline-block;
   height: 30px;
   width: 30px;
-  color: var(--chakra-colors-gray-500);
-  background-color: var(--chakra-colors-gray-500);
-  -webkit-mask: url(../public/icons/chevron-right.svg) bottom center no-repeat;
-  mask: url(../public/icons/chevron-right.svg) bottom center no-repeat;
+  color: inherit;
+  background-color: #344054; // gray-700
+  -webkit-mask: url(../assets/icons/chevron-right.svg) bottom center no-repeat;
+  mask: url(../assets/icons/chevron-right.svg) bottom center no-repeat;
 }
 
 .react-calendar__navigation {
